--- a/links.html
+++ b/links.html
@@ -7,12 +7,17 @@
 </head>
 <body>
 
+<div>
+
 <h1>Links</h1>
 <p>Websites i like</p>
 
-
+<p><a href="./links.txt">txt version</a></p>
 
 <br>
+
+<div class="content">
+
 <b><h2>Personal/Blog sites</h2></b>
 <b><p><a href="https://digdeeper.club/">Dig Deeper (clearnet)</a>, <a href="http://5essxguxi5enurgtuquvrjuvikss4gc5lbhmtz57cq4cedqx5tqvaxqd.onion/">(onion)</a>, and <a href="http://dgnwtz36mhiro5rs36n7r5mxs2srzvhaaui5hfuceiy2nehhe2ha.b32.i2p/">(I2P)</a></p></b>
 <b><p><a href="https://spyware.neocities.org/">Spyware Watchdog</a></p></b>
@@ -20,6 +25,10 @@
 <b><p><a href="https://eldritchdata.neocities.org/">Eldritch Data</a></p></b>
 <b><p><a href="https://her.st/">her.st</a></p></b>
 <b><p><a href="https://libreweb.neocities.org/">LibreWEB</a></p></b>
+
+</div>
+<br>
+<div class="content">
 
 <h2>Forums/Imageboards</h2>
 
@@ -36,34 +45,47 @@
 <b><p><a href="http://kiwifarmsaaf4t2h7gc3dfc5ojhmqruw2nit3uejrpiagrxeuxiyxcyd.onion/">Kiwifarms (onion)</a></p></b>
 <b><p><a href="http://ramble.i2p/">Ramble (I2P)</a>, <a href="https://ramble.pw/">(clearnet)</a>, and <a href="http://rambleeeqrhty6s5jgefdfdtc6tfgg4jj6svr4jpgk4wjtg3qshwbaad.onion/">(onion)</a></p></b>
 
-<h2>Video sharing sites</h2>
-
-<b><p><a href="https://vidlii.com/">Vidlii (clearnet)</a> and <a href="vidlii3kemmoa2rwvpuch5tzztyxhlwpuogpttgzc25ckqszaiy7gmyd.onion/">(onion)</a></p></b>
-<b><p><a href="https://www.nicovideo.jp/">NicoNico</a></p></b>
-<b><p><a href="https://odysee.com/">Odysee</a></p></b>
-<b><p><a href="https://ourtube.co.uk/">OurTube</a></p></b>
-<b><p><a href="https://libre.video/">Libre.Video</a></p></b>
+</div>
+<br>
+<div class="content">
 
 <h2>Email</h2>
 
 <b><p><a href="http://dnmxjaitaiafwmss2lx7tbs5bv66l7vjdmb5mtb3yqpxqhk3it5zivad.onion/">DNMX (onion)</a></p></b>
 <b><p><a href="http://mail2torjgmxgexntbrmhvgluavhj7ouul5yar6ylbvjkxwqf6ixkwyd.onion/">Mail2Tor (onion)</a></p></b>
 <b><p><a href="https://danwin1210.de/mail/">Danwin1210 mail (clearnet)</a> and <a href="http://danielas3rtn54uwmofdo3x2bsdifr47huasnmbgqzfrec5ubupvtpid.onion/mail/">(onion)</a></p></b>
+<b><p><a href="https://www.guerrillamail.com/">Guerrilla Mail</a></p></b>
+
+</div>
+<br>
+<div class="content">
 
 <h2>Torrenting</h2>
 <b><p><a href="https://thepiratebay.org/index.html">The Pirate bay (clearnet)</a> and <a href="http://piratebayo3klnzokct3wt5yyxb2vpebbuyjl7m623iaxmqhsd52coid.onion/">(onion)</a></p></b>
 <b><p><a href="https://1337x.to/">1337x (clearnet)</a> and <a href="http://l337xdarkkaqfwzntnfk5bmoaroivtl6xsbatabvlb52umg6v3ch44yd.onion/">(onion)</a> </p></b>
 
+</div>
+<br>
+<div class="content">
+
 <h2>Guides</h2>
 <b><p><a href="http://biblemeowimkh3utujmhm6oh2oeb3ubjw2lpgeq3lahrfr2l6ev6zgyd.onion/">DNM Bible (onion)</a></p></b>
+
+</div>
+<br>
+<div class="content">
 
 <h2>Link Lists/Search Engines</h2>
 <b><p><a href="https://searx.prvcy.eu/">PRVCY Searx (clearnet)</a>, and <a href="http://rq2w52kyrif3xpfihkgjnhqm3a5aqhoikpv72z3drpjglfzc2wr5z4yd.onion/">(onion)</a></p></b>
 <b><p><a href="http://7tcuoi57curagdk7nsvmzedcxgwlrq2d6jach4ksa3vj72uxrzadmqqd.onion/">gimmeasearx (onion)</a></p></b>
 <b><p><a href="https://searx.space/">List of SearX instances (clearnet)</a>, and <a href="http://searxspbitokayvkhzhsnljde7rqmn7rvoga6e4waeub3h7ug3nghoad.onion/">(onion)</a></p></b>
-<b><p><a href="https://lx.vern.cc/">LibreX (clearnet)</a>, and <a href="http://lx.vernccvbvyi5qhfzyqengccj7lkove6bjot2xhh5kajhwvidqafczrad.onion/">(onion)</a></p></b>
+<b><p><a href="https://4get.ca/">4get</a></p></b>
 <b><p><a href="http://3bbad7fauom4d6sgppalyqddsqbf5u5p56b5k5uk2zxsy3d6ey2jobad.onion/">OnionLand Search Engine (onion)</a></p></b>
 <b><p><a href="https://dark.fail/">Dark.Fail (clearnet)</a>, and <a href="http://darkfailenbsdla5mal2mxn2uz66od5vtzd5qozslagrfzachha3f3id.onion/">(onion)</a></p></b>
 <b><p><a href="https://onions.danwin1210.de/">Onion Link List (clearnet)</a>, and <a href="http://donionsixbjtiohce24abfgsffo2l4tk26qx464zylumgejukfq2vead.onion/">(onion)</a></p></b>
+
+</div>
+<br>
+
 </body>
 </html> 
