--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+<div class="content">
+
 <h1 class="title">AryanTruth88.Neocities.Org</h1>
 <img class="center" src="./images/at88background.jpg" width="650" ></a>
 
@@ -16,10 +18,11 @@
 <b><h2><a href="https://aryantruth14.123guestbook.com/">Guestbook</a></h2></b>
 <b><h2><a href="chat.html">Chat</a></h2></b>
 <b><h2><a href="https://github.com/AryanTruth14/aryantruth14.github.io/">Source code</a></h2></b>
+
 <br>
 <br>
 
-
+</div>
 
 
 <footer>
