--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+<div class="content">
+
 <h1>Contact information</h1>
 
 <br>
@@ -28,7 +30,7 @@
 <b><p>Mastodon: <a href="https://stranger.social/@AryanTruth">@AryanTruth@stranger.social </a></p></b>
 <b><p>Ramble: <a href="http://ramble.i2p/user/AT88">http://ramble.i2p/user/AT88 (I2P)</a>, <a href="https://ramble.pw/user/AT88">(clearnet)</a>, and <a href="http://rambleeeqrhty6s5jgefdfdtc6tfgg4jj6svr4jpgk4wjtg3qshwbaad.onion/user/AT88">(.onion)</a></p></b>
 
-
+</div>
 
 </body>
 </html> 
